--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,1 +1,36 @@
-/* This file is for your main application css. */
+body, main, #elm-main, .container {
+  flex-direction: column;
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+.strip{
+  width: 300%;
+  display: flex;
+  position: absolute;
+  justify-content: space-between;
+  transition: left 0.5s;
+}
+.pane{
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+#About{
+  left: 0%;
+}
+#Blog{
+  left: -100%;
+}
+#Contact{
+  left: -200%;
+}
+.view{
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
