--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -34,3 +34,30 @@ body, main, #elm-main, .container {
   width: 100%;
   overflow: hidden;
 }
+.arrow{
+  height: 20px;
+  width: 20px;
+  position: relative;
+  border: solid transparent 10px;
+  transform: rotate(45deg);
+  top:50%;
+  margin: 0;
+  padding: 0;
+}
+.left{
+  left: 10px;
+  border-bottom-color: red;
+  border-left-color: red;
+}
+.right{
+  right: 10px;
+  border-top-color: red;
+  border-right-color: red;
+}
+.arrow-bar{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+}
